# ciq-test-2

./: .env.example  .env.local  .env.supabase.example  .env.template  .gitignore  FINAL_ORGANIZATION_SUMMARY.md  README.md  dagster_cloud.yaml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: branch_deployments.yml  deploy.yml
archive/legacy-defs/: README.md  partitioned_assets.py  resources.py  ttb_asset_checks.py  ttb_config.py  ttb_consolidated_assets.py  ttb_consolidated_jobs.py  ttb_data_extraction.py  ttb_dimensional_assets.py  ttb_fact_assets.py  ttb_monitoring.py  ttb_parsing_assets.py  ttb_partitions.py  ttb_schema.py
archive/ttb_pipeline-traditional-20250918-224605/: README.md  __init__.py  definitions.py
configs/: README.md  complete_pipeline_config.yaml  dev.yaml  max_batch_config.yaml  partition_config.yaml  prod.yaml
data/: README.md
data/sample_outputs/: beer_parsing_output.json  certificate_parsing_output.json  cola_parsing_output.json
docs/: CLEANUP_SUMMARY.md  CONFIGURATION.md  MIGRATION_PLAN.md  README.md  TEMP_CLEANUP_SUMMARY.md  TTB_SYSTEM_GUIDE.md
sql/: create_supabase_tables.sql
src/ciq_test_2/: README.md  definitions.py
tests/: README.md
tests/configs/: README.md  full_day_test_config.yaml  test_small_config.yaml
tests/development_scripts/: README.md  enhanced_partitioning_example.py  examine_pipeline_output.py  parse_reference_data.py  refactor_example.py  run_specific_date.py  show_reference_data.py  test_image_downloads.py  test_session_direct.py  test_session_images.py
tests/integration/: README.md  (+4 more)
(+42 files in other folders)
