[project]
name = "ciq_test_2"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.11.10",
    "localstack>=4.8.1",
    "dagster-aws>=0.24.10",
    "requests>=2.31.0",
    "beautifulsoup4>=4.13.5",
    "supabase>=2.19.0",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "ciq_test_2"
registry_modules = [
    "ciq_test_2.components.*",
]


